add SmartListSizeBenchmark